# mobile_robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_control/lib/robot_control/: circle  circle_motion
install/robot_control/share/robot_control/: package.sh
install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
install/robot_description/share/ament_index/resource_index/parent_prefix_path/: robot_description
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_description/share/robot_description/cmake/: robot_descriptionConfig-version.cmake  robot_descriptionConfig.cmake
install/robot_description/share/robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/robot_description/share/robot_description/urdf/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot_base.urdf
install/simulations/share/simulations/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simulations/share/simulations/launch/: gazebo.launch.py  house.launch.py  rsp.launch.py  simulate.launch.py  warehouse.launch.py
install/worlds/share/worlds/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/robot_control/: package.xml  setup.py
src/robot_description/: CMakeLists.txt
src/robot_description/urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot_base.urdf
src/simulations/: CMakeLists.txt  package.xml  setup.py
src/simulations/launch/: display.launch.py  gazebo.launch.py
src/worlds/: setup.cfg  setup.py
src/worlds/worlds/: cafe.world  first_house.world  house.world  warehouse.world
